--- a/IDZ3/IDZ3.csproj
+++ b/IDZ3/IDZ3.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.2.23128.3" />
     <PackageReference Include="System.Reactive" Version="6.0.0-preview.1" />
   </ItemGroup>
 
