--- a/IDZ3/IDZ3.csproj
+++ b/IDZ3/IDZ3.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.Reactive" Version="6.0.0-preview.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Resourses\" />
+  </ItemGroup>
+
 </Project>
